Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99182

Fix unloadMedia test

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.2.3, 6.3.0 Alpha
    • 6.3
    • Multimedia
    • None
    • Android
    • 345134f517 (qt/qtmultimedia/dev) 7f1265ee22 (qt/qtmultimedia/6.2) b84dc890f5 (qt/qtmultimedia/6.3)

      25: FAIL! : tst_QMediaPlayerBackend::unloadMedia() 'player.duration() <= 0' returned FALSE. ()
      25: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediaplayerbackend/tst_qmediaplayerbackend.cpp(281)]

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samuelmira Samuel Mira
            samuelmira Samuel Mira
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes