Fix qmediaplayerbackend unloadMedia test in Android

After changing the source to a empty url, the test expected the player
to return <= 0 seconds of duration, and the android media player was
returning the previous duration.

Fixes: QTBUG-99182
Pick-to: 6.3 6.2
Change-Id: Iab1a8b386ed0d90d8621fb67528d5a44a2fa2c0c
Reviewed-by: Lars Knoll <lars.knoll@qt.io>